--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -61,7 +61,7 @@ Rails/Output:
   Exclude:
     - 'db/seeds.rb'
 
-# Must use a bang after updates and creates so that it checks validations, but this is not necessary in seeds.rb
+# This cop checks for the use of methods which skip validations which are listed in guides.rubyonrails.org/active_record_validations.html#skipping-validations
 Rails/SkipsModelValidations:
   Enabled: true
   Exclude:
