Update the readme and add an exclusion to the routes file

--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -28,6 +28,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
+    - 'config/routes.rb'
 
 # The guiding principle of classes is SRP, SRP can't be accurately measured by LoC
 Metrics/ClassLength:
