--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -124,6 +124,12 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/NestedGroups:
+  MaxNesting: 5
+
+RSpec/ExpectInHook:
+  Enabled: false
+
 Rails/HttpPositionalArguments:
   Exclude:
     # this just doesn't seem right for things like 'on: :member'
