enabled newCops, disabled message spies and doubles

--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -3,6 +3,7 @@ require:
   - rubocop-rspec
 
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.6
   TargetRailsVersion: 5.2.3
   Exclude:
@@ -12,9 +13,6 @@ AllCops:
     - 'spec/dummy/db/schema.rb'
     - 'spec/dummy/db/migrate/*'
     - 'spec/dummy/lib/templates/**/*'
-
-Layout/EmptyLinesAroundAttributeAccessor:
-  Enabled: false
 
 # Want to use even indentation for the various methods within a class, and
 # also want to be able to indent private methods without errors
@@ -27,22 +25,13 @@ Layout/LineLength:
   Exclude:
     - 'spec/**/*_spec.rb'
 
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: false
-
 # Must use a comparator for conditionals instead of an equals sign
 Lint/AssignmentInCondition:
   AllowSafeAssignment: false
 
-Lint/DeprecatedOpenSSLConstant:
-  Enabled: false
-
 # Finds any cases of binding.pry or byebug left in the code
 Lint/Debugger:
   Enabled: true
-
-Lint/MixedRegexpCaptureTypes:
-  Enabled: false
 
 Lint/RaiseException:
   Enabled: true
@@ -94,38 +83,12 @@ Rails/SkipsModelValidations:
   Exclude:
     - 'spec/**/*_spec.rb'
 
-Style/AccessorGrouping:
-  Enable: false
-
-Style/BisectedAttrAccessor:
-  Enable: false
-
 # Check for uses of braces around single-line blocks, and also for multi-line blocks with an
 # attached method like: {...}.where
 # It will still preferentially choose do/end for multi-line blocks
 Style/BlockDelimiters:
   Enabled: true
   EnforcedStyle: braces_for_chaining
-
-Style/ExponentialNotation:
-  Enabled: false
-
-Style/RedundantAssignment:
-  Enabled: false
-
-Style/RedundantFetchBlock:
-  Enabled: false
-
-Style/RedundantRegexpCharacterClass:
-  Enabled: false
-
-Style/RedundantRegexpExcape:
-  Enabled: false
-
-Style/SlicingWithRange:
-  Enabled: false
-
-
 
 # has_key? and has_value? are far more readable than key? and value? so this allows both
 # of those formats to be used
@@ -175,6 +138,12 @@ RSpec/ExpectInHook:
   Enabled: false
 
 RSpec/AnyInstance:
+  Enabled: false
+
+RSpec/MessageSpies:
+  Enabled: false
+
+RSpec/VerifiedDoubles:
   Enabled: false
 
 Rails/HttpPositionalArguments:
