--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -131,6 +131,9 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
 RSpec/NestedGroups:
   Max: 5
 
