--- a/rubocop_defaults.yml
+++ b/rubocop_defaults.yml
@@ -4,8 +4,8 @@ require:
 
 AllCops:
   NewCops: enable
-  TargetRubyVersion: 2.6
-  TargetRailsVersion: 5.2.3
+  TargetRubyVersion: 2.7
+  TargetRailsVersion: 6.0.3.4
   Exclude:
     - 'db/schema.rb'
     - 'db/migrate/*'
@@ -13,6 +13,7 @@ AllCops:
     - 'spec/dummy/db/schema.rb'
     - 'spec/dummy/db/migrate/*'
     - 'spec/dummy/lib/templates/**/*'
+    - 'node_modules/**/*'
 
 # Want to use even indentation for the various methods within a class, and
 # also want to be able to indent private methods without errors
